--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
         <version>2.4.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>kz.satbayev</groupId>
-    <artifactId>university</artifactId>
-    <version>1.0.0</version>
-    <name>JwtAppDemo</name>
-    <description>JWT based spring security REST API</description>
+    <groupId>kz.satbayev.university</groupId>
+    <artifactId>digital-library</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>digital-library</name>
+    <description>digital-library</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -69,12 +69,14 @@
             <version>${jsonwebtoken.version}</version>
         </dependency>
 
-        <!-- Lombok -->
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
+            <version>1.18.26</version>
+            <scope>provided</scope>
         </dependency>
+
 
         <!-- Spring test -->
         <dependency>
@@ -107,6 +109,12 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
