--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8075
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/digital_library?serverTimezone=UTC
+spring.datasource.url=${DATASOURCE_URL:jdbc:postgresql://localhost:5432/digital_library?serverTimezone=UTC}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -19,12 +19,12 @@ spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE:20MB}
 spring.servlet.multipart.file-size-threshold=${FILE-SIZE-THRESHOLD:2KB}
 #Liquibase Properties
 spring.liquibase.change-log=classpath:liquibase/db.changelog-master.xml
-spring.liquibase.url=jdbc:postgresql://localhost:5432/digital_library?serverTimezone=UTC
+spring.liquibase.url=${DATASOURCE_URL:jdbc:postgresql://localhost:5432/digital_library?serverTimezone=UTC}
 spring.liquibase.user=postgres
 spring.liquibase.password=postgres
 
-jwt.token.secret=jwtappdemo
-jwt.token.expired=3600000
+jwt.token.secret=${TOKEN_SECRET:jwtappdemo}
+jwt.token.expired=${TOKEN_EXPIRED:3600000}
 
 # Minio
 minio.bucket.name=minio-example-demo
