--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <java.version>1.8</java.version>
         <jsonwebtoken.version>0.8.0</jsonwebtoken.version>
         <postgresql.version>42.2.18</postgresql.version>
+        <maven.test.skip>true</maven.test.skip>
     </properties>
 
     <dependencies>
@@ -113,9 +114,8 @@
         </dependency>
 
         <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>javax.mail-api</artifactId>
-            <version>1.6.2</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
     </dependencies>
 
