--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
 
   digital-library:
     image: digital-library-digital-library
+    ports:
+      - "8075:8075"
     build:
       context: .
       dockerfile: Dockerfile
