--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,26 @@ services:
       POSTGRES_PASSWORD: postgres
 
   digital-library:
-    image: digital-library-digital-library
+    image: baktybek26/digital-library
     ports:
       - "8075:8075"
-    build:
-      context: .
-      dockerfile: Dockerfile
     environment:
       - DATASOURCE_URL=jdbc:postgresql://postgres:5432/digital_library?serverTimezone=UTC
       - TOKEN_SECRET=jwtappdemo
       - TOKEN_EXPIRED=3600000
+
+  digital-library-front:
+    image: baktybek26/digital-library-front
+    ports:
+      - "3000:3000"
+  minio:
+    image: minio/minio:RELEASE.2018-09-01T00-38-25Z
+    ports:
+      - "9002:9002"
+    environment:
+      - MINIO_ACCESS_KEY=AKIAIOSFODNN7EXAMPLE
+      - MINIO_SECRET_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+    command: server /export --address ":9002"
+    dns:
+      - "127.0.0.11"
+      - "8.8.8.8"
